[gd_scene load_steps=2 format=3 uid="uid://c3t5iyrk83f5f"]

[ext_resource type="Script" uid="uid://bmemjwxc4i56c" path="res://scenes/first_scene/first_scene.gd" id="1_mgu5x"]

[node name="FirstScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgu5x")

[node name="MainScreen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="WorkButton" type="Button" parent="MainScreen"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "Work job"

[node name="SaveClearButton" type="Button" parent="MainScreen"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
text = "Clear save (debug only)"

[node name="StatsContainer" type="MarginContainer" parent="MainScreen"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MoneyLabel" type="Label" parent="MainScreen/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_type_variation = &"HeaderLarge"
text = "Money: $<value>"

[node name="HealthLabel" type="Label" parent="MainScreen/StatsContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StressLabel" type="Label" parent="MainScreen/StatsContainer"]
layout_mode = 2
